[ML] Fix docs content spacing, rename classnames, add filters to Discover, lens, and maps

--- a/x-pack/plugins/data_visualizer/public/application/common/components/stats_table/_index.scss
+++ b/x-pack/plugins/data_visualizer/public/application/common/components/stats_table/_index.scss
@@ -9,7 +9,7 @@ $panelWidthL:     #{'max(40%, 450px)'};
   padding-left: $euiSize * 4;
   width: 100%;
 
-  .fieldDataCard__valuesTitle {
+  .dvExpandedRow__valuesTitle {
     text-transform: uppercase;
     text-align: left;
     color: $euiColorDarkShade;
